#613: update CombinedResourceHandlerIT to test excluding media="print"

--- a/src/test/resources/org.omnifaces.test.resourcehandler.combinedresourcehandler/CombinedResourceHandlerIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.resourcehandler.combinedresourcehandler/CombinedResourceHandlerIT.xhtml
@@ -28,6 +28,9 @@
 		<h:outputScript name="headWithTarget.js" target="head" />
 		<h:outputScript name="headWithoutTarget.js" />
 		<o:deferredScript name="deferredInHead.js" />
+		<h:outputStylesheet name="main.css" />
+		<h:outputStylesheet name="screen.css" />
+		<h:outputStylesheet name="print.css" media="print" />
 	</h:head>
 	<h:body>
 		<h:outputScript name="bodyWithTargetHead.js" target="head" />
