Improve MultiViewIT to remove ambiguity in name of welcome file

--- a/src/test/resources/org.omnifaces.test.facesviews.multiviews/MultiViewsITWelcomeFile.xhtml
+++ b/src/test/resources/org.omnifaces.test.facesviews.multiviews/MultiViewsITWelcomeFile.xhtml
@@ -22,7 +22,7 @@
 	xmlns:of="http://omnifaces.org/functions"
 >
 	<h:head>
-		<title>MultiViewsIT</title>
+		<title>MultiViewsITWelcomeFile</title>
 	</h:head>
 
 	<h:body>
