--- a/src/test/resources/org.omnifaces.test.resourcehandler.combinedresourcehandler/CombinedResourceHandlerIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.resourcehandler.combinedresourcehandler/CombinedResourceHandlerIT.xhtml
@@ -23,7 +23,7 @@
 >
 	<h:head>
 		<h:outputScript>var i = 0;</h:outputScript>
-		<h:outputScript library="jakarta.faces" name="jsf.js" target="head" />
+		<h:outputScript library="jakarta.faces" name="#{combinedResourceHandlerITBean.facesJsAvailable ? 'faces.js' : 'jsf.js'}" target="head" />
 		<h:outputScript library="omnifaces" name="omnifaces.js" target="head" />
 		<h:outputScript name="headWithTarget.js" target="head" />
 		<h:outputScript name="headWithoutTarget.js" />
