#671: add f:viewAction corner case to ScriptParamIT

--- a/src/test/resources/org.omnifaces.test.component.scriptparam/ScriptParamIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.component.scriptparam/ScriptParamIT.xhtml
@@ -25,6 +25,7 @@
 	<f:metadata>
 		<o:scriptParam script="new Date().getTimezoneOffset()" value="#{scriptParamITBean.clientTimeZoneOffset}" render="scriptLoadTimestamp clientTimeZoneOffset" />
 		<o:scriptParam script="window.navigator" value="#{scriptParamITBean.navigator}" render="appName" />
+		<f:viewAction action="#{scriptParamITBean.onload}" />
 	</f:metadata>
 
 	<h:head />
