--- a/src/test/resources/org.omnifaces.test.el/ExpressionInspectorIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.el/ExpressionInspectorIT.xhtml
@@ -38,5 +38,11 @@
 		<h:outputText id="methodReferenceReturnType" value="#{expressionInspectorITBean.methodReference.returnType.simpleName}" />
 		<h:outputText id="methodReferenceFirstParamType" value="#{empty expressionInspectorITBean.methodReference.paramTypes ? '' : expressionInspectorITBean.methodReference.paramTypes[0].simpleName}" />
 		<h:outputText id="methodReferenceFirstActualParameter" value="#{empty expressionInspectorITBean.methodReference.actualParameters ? '' : expressionInspectorITBean.methodReference.actualParameters[0]['class'].simpleName}" />
-	</h:body>
+	
+		<o:form id="form">
+			<h:outputText id="methodReferenceResolved" value="#{expressionInspectorITBean.methodReferenceResolved}" />
+			<o:methodParam name="method" value="#{expressionInspectorITBean.resolveMethodReference()}" />
+			<h:commandButton id="resolveMethodReference" value="resolve" action="#{method}" />
+		</o:form>
+</h:body>
 </html>
