omnifaces#677: extend IT with new cases for ME-VE/VE-ME wrappings

--- a/src/test/resources/org.omnifaces.test.el/ExpressionInspectorIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.el/ExpressionInspectorIT.xhtml
@@ -44,5 +44,14 @@
 		<h:outputText id="valueMethodReferenceReturnType" value="#{expressionInspectorITBean.valueMethodReference.returnType.simpleName}" />
 		<h:outputText id="valueMethodReferenceParamTypes" value="#{of:joinArray(expressionInspectorITBean.valueMethodReference.paramTypes, ', ')}" />
 		<h:outputText id="valueMethodReferenceActualParameters" value="#{of:joinArray(expressionInspectorITBean.valueMethodReference.actualParameters, ', ')}" />
+
+		<h:outputText id="methodValueReferenceBase" value="#{expressionInspectorITBean.methodValueReference.base['class'].simpleName}" />
+		<h:outputText id="methodValueReferenceProperty" value="#{expressionInspectorITBean.methodValueReference.property}" />
+
+		<h:outputText id="methodMethodReferenceBase" value="#{expressionInspectorITBean.methodMethodReference.base['class'].simpleName}" />
+		<h:outputText id="methodMethodReferenceMethodName" value="#{expressionInspectorITBean.methodMethodReference.method.name}" />
+		<h:outputText id="methodMethodReferenceReturnType" value="#{expressionInspectorITBean.methodMethodReference.returnType.simpleName}" />
+		<h:outputText id="methodMethodReferenceParamTypes" value="#{of:joinArray(expressionInspectorITBean.methodMethodReference.paramTypes, ', ')}" />
+		<h:outputText id="methodMethodReferenceActualParameters" value="#{of:joinArray(expressionInspectorITBean.methodMethodReference.actualParameters, ', ')}" />
 	</h:body>
 </html>
