Fix 687: add enum+interface case to ImportConstantsIT

--- a/src/test/resources/org.omnifaces.test.taghandler.importconstants/ImportConstantsIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.taghandler.importconstants/ImportConstantsIT.xhtml
@@ -27,5 +27,7 @@
 		<h:outputText id="parent" value="#{ImportConstantsITParentBean.VALUE}" />
 		<o:importConstants type="org.omnifaces.test.taghandler.importconstants.ImportConstantsITChildBean" />
 		<h:outputText id="child" value="#{ImportConstantsITChildBean.VALUE}" />
+		<o:importConstants type="org.omnifaces.test.taghandler.importconstants.ImportConstantsITEnumImplementingInterface" />
+		<h:outputText id="enumValues" value="#{ImportConstantsITEnumImplementingInterface.values()}" />
 	</h:body>
 </html>
