--- a/src/test/resources/org.omnifaces.test.taghandler.importconstants/ImportConstantsIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.taghandler.importconstants/ImportConstantsIT.xhtml
@@ -27,7 +27,11 @@
 		<h:outputText id="parent" value="#{ImportConstantsITParentBean.VALUE}" />
 		<o:importConstants type="org.omnifaces.test.taghandler.importconstants.ImportConstantsITChildBean" />
 		<h:outputText id="child" value="#{ImportConstantsITChildBean.VALUE}" />
+		<o:importConstants type="org.omnifaces.test.taghandler.importconstants.ImportConstantsITInterface" />
+		<h:outputText id="interface" value="#{ImportConstantsITInterface.VALUE}" />
+		<o:importConstants type="org.omnifaces.test.taghandler.importconstants.ImportConstantsITEnum" />
+		<h:outputText id="enumValues" value="#{ImportConstantsITEnum.values()}" />
 		<o:importConstants type="org.omnifaces.test.taghandler.importconstants.ImportConstantsITEnumImplementingInterface" />
-		<h:outputText id="enumValues" value="#{ImportConstantsITEnumImplementingInterface.values()}" />
+		<h:outputText id="enumInterfaceValues" value="#{ImportConstantsITEnumImplementingInterface.values()}" />
 	</h:body>
 </html>
